<resources>
    <string name="app_name">Paws Alert</string>

    <string name="parse_app_id">Rh49lFj76OsfTBrChoM2wn55Lp0raNoMFNrj8LmJ</string>
    <string name="parse_client_key">k8ALeQtdeP5CZQtvKCWOim6JOC6c3jvG1v56GDaq</string>
    <string name="more_info">More Info</string>
    <string name="home">Home</string>
    <string name="donate">Donate</string>
    <string name="foster">Foster</string>
    <string name="volunteer">Volunteer</string>
    <string name="success_stories">Success Stories</string>
    <string name="about">About</string>
    <string name="sign_in">Sign In</string>
    <string name="pet_name">Pet Name</string>
    <string name="missing">Missing</string>
    <string name="adopt">Adopt</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="select_location">Select location</string>
    <string name="what_kind">What kind?</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="other">Other</string>
    <string name="details">Details</string>
    <string name="create_listing">Create Listing</string>
    <string name="has_microchip">Has Microchip?</string>
    <string name="is_neutered">Is Neutered?</string>
    <string name="add_photos">Add Photos</string>
    <string name="has_vaccinations">Has Vaccinations?</string>
    <string name="location">Location</string>


    <array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </array>

    <string name="loren_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec fermentum nulla, pellentesque ultrices ligula. Etiam luctus facilisis congue. Sed lacus elit, venenatis eu blandit id, lacinia non felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin gravida lobortis lacus vitae porttitor. In nec risus ut metus laoreet luctus eget nec felis. Nunc viverra pellentesque elementum.</string>
    <string name="petImage">petImage</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="share">Share</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name_last_name">First Name + Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="favorites">Favorites</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password_number">Password must have at least 1 number</string>
    <string name="password_min_chars">Password must be at least 6 characters.</string>
    <string name="phone_number_error">Phone number must be at least 9 digits.</string>
    <string name="passwords_match">Passwords don\'t match.</string>
    <string name="name">Name</string>
    <string name="webpage">Webpage</string>
    <string name="description">Description</string>
    <string name="shelters">Shelters</string>
    <string name="select_picture">Select Picture</string>
    <string name="adoption_fee">Adoption Fee</string>
    <string name="call">Call</string>
    <string name="website">Website</string>
    <string name="see_animals">See Animals</string>
    <string name="see_more_pictures">See More Pictures</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="story">Story</string>
    <string name="see_story">See Story</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="edit_account">Edit Account</string>
    <string name="save_changes">Save Changes</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="about_text">
        Paws alert was developed by Marcus Gabilheri for the Oklahoma State University 2016 App Competition.
        The application was developed with the City of Stillwater for its own use. Tyler Weppler gave the original idea for the application.
        Paws Alert watches for the location of missing pets and notifies the user if there is a missing pet in the area.
        The technology used to provide this kind of information is called Geofences.
    </string>
    <string name="forgot_password">Forgot password?</string>
    <string name="found">Found</string>
    <string name="map">MAP</string>

</resources>
