<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:sc_tint_color="@color/accent_color"
        tools:showIn="@layout/activity_add">

        <RadioButton
            android:id="@+id/dog"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/dog" />

        <RadioButton
            android:id="@+id/cat"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cat" />

        <RadioButton
            android:id="@+id/other"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/other" />

    </info.hoang8f.android.segmented.SegmentedGroup>

    <android.support.design.widget.TextInputLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/otherLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="gone"
        tools:showIn="@layout/activity_add">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/otherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_paw_print"
            android:drawablePadding="16dp"
            android:hint="@string/what_kind"
            android:inputType="number"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>
</LinearLayout>