<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:showIn="@layout/activity_add"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segment_missing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:sc_tint_color="@color/accent_color"
        tools:showIn="@layout/activity_add">

        <RadioButton
            android:id="@+id/missing"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/missing" />

        <RadioButton
            android:id="@+id/adopt"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/adopt" />
    </info.hoang8f.android.segmented.SegmentedGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/adoptionFeeLayout"
        android:visibility="gone"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/adoptionFee"
            android:hint="@string/adoption_fee"
            android:drawableLeft="@drawable/ic_money"
            android:drawablePadding="16dp"
            android:background="@android:color/transparent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="20sp"
            android:inputType="number"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>