<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="0dp"
    app:cardElevation="4dp"
    app:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Information"
            android:drawableLeft="@drawable/ic_action_info"
            android:drawableTint="@color/grey_700"
            android:drawablePadding="8dp"
            android:textSize="18sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_300"/>

        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_time"
                android:gravity="center"
                android:textSize="16sp"
                android:drawablePadding="8dp"
                android:text="@string/age" />

            <TextView
                android:id="@+id/petAge"
                android:gravity="center|end|right"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_vaccinations"
                android:gravity="center_vertical"
                android:drawablePadding="8dp"
                android:textSize="16sp"
                android:text="@string/has_vaccinations" />

            <ImageView
                android:id="@+id/hasVaccinations"
                android:gravity="center"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                tools:src="@drawable/ic_unchecked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_neutered"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/is_neutered" />

            <ImageView
                android:id="@+id/isNeutered"
                android:gravity="center"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                tools:src="@drawable/ic_unchecked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_microchip"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/has_microchip" />

            <ImageView
                android:id="@+id/hasMicrochip"
                android:gravity="center"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                android:src="@drawable/ic_unchecked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>